--- a/src/app/features/posts/user-posts/user-posts.component.html
+++ b/src/app/features/posts/user-posts/user-posts.component.html
@@ -1,6 +1,11 @@
 <app-posts [filterByOwner]="ownerId">
     <div *ngIf="showOwnPosts" class="rounded-card m-b-05" left-section-element>
-        <h1 class="fs-large m-b-05">Mis publicaciones</h1>
+        <div class="flex-center-center m-b-05 gap-05">
+            <h1 class="fs-large">Mis publicaciones</h1>
+            <a mat-icon-button class="text-blue" aria-label="Crear publicación" matTooltip="Crear publicación" [routerLink]="['/posts/create']">
+                <mat-icon>add</mat-icon>
+            </a>
+        </div>
         <div class="text-center fw-500 m-b-05">
             <p *ngIf="!posts.value">
                 Anímante, crea un publicación y comparte con la comunidad! 🙌
@@ -32,7 +37,7 @@
         </div>
         <div class="flex-center-center gap-07">
             <div class="flex-column-center text-center" *ngFor="let stat of stats">
-                <div class="flex-center-center" [matTooltip]="stat.text">
+                <div class="flex-center-center">
                     <span class="fs-large fw-600">{{ stat.value }}</span>
                     <mat-icon class="text-{{ stat.color }}">{{ stat.icon }}</mat-icon>
                 </div>
