--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -40,6 +40,10 @@
 }
 
 // Margin
+.m-0 {
+    margin: 0;
+}
+
 .m-y-1 {
     margin-block: 1rem;
 }
@@ -66,6 +70,10 @@
 
 .m-l-05 {
     margin-left: .5rem;
+}
+
+.m-r-05 {
+    margin-right: .5rem;
 }
 
 // Padding
