fix(planishare): fix mat-button icons and add TODO comment

--- a/src/app/features/posts/components/delete-dialog/delete-dialog.component.html
+++ b/src/app/features/posts/components/delete-dialog/delete-dialog.component.html
@@ -12,6 +12,6 @@
 
   <button mat-raised-button color="warn" (click)="deletePost()">
     <span>Eliminar</span>
-    <mat-icon class="fs-regular">delete</mat-icon>
+    <mat-icon class="fs-medium">delete</mat-icon>
   </button>
 </div>
