--- a/src/app/shared/components/report-dialog/report-dialog.component.html
+++ b/src/app/shared/components/report-dialog/report-dialog.component.html
@@ -29,6 +29,6 @@
 
   <button mat-raised-button color="primary" [disabled]="isLoading || form.invalid" type="submit">
     <span>Enviar</span>
-    <mat-icon class="fs-regular">send</mat-icon>
+    <mat-icon class="fs-medium">send</mat-icon>
   </button>
 </div>
