--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -19,6 +19,10 @@
               <mat-icon>report</mat-icon>
               <span>Reportar</span>
             </button>
+            <a mat-menu-item [routerLink]="['/posts/edit', post.id]" *ngIf="post.user.id === user?.id">
+              <mat-icon>edit</mat-icon>
+              <span>Editar</span>
+            </a>
             <button mat-menu-item (click)="deletePost(post)" *ngIf="post.user.id === user?.id">
               <mat-icon>delete</mat-icon>
               <span>Eliminar</span>
