--- a/src/app/features/posts/post-form/post-form.component.html
+++ b/src/app/features/posts/post-form/post-form.component.html
@@ -78,15 +78,14 @@
         </div>
       </mat-form-field>
 
-      <div class="flex-end-center">
-        <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading" @inOutRight
-          [@.disabled]="this.form.invalid || isPostDataLoading" [disabled]="isPostDataLoading">
-          <span>{{ !isEditForm ? 'Publicar' : 'Guardar' }}</span>
+      <div class="flex-end-center gap-025">
+        <button *appButtonLoader="isLoading" type="submit" mat-raised-button color="primary" @inOutRight
+          [@.disabled]="!isLoading" [disabled]="isPostDataLoading">
+          {{ !isEditForm ? 'Publicar' : 'Guardar' }}
           <mat-icon class="fs-medium">
             {{ !isEditForm ? 'send' : 'save' }}
           </mat-icon>
         </button>
-        <div class="shapes-loader" *ngIf="isLoading" @inOutLeft matTooltip="Cargando"></div>
       </div>
     </form>
   </div>
