--- a/src/app/shared/components/report-dialog/report-dialog.component.html
+++ b/src/app/shared/components/report-dialog/report-dialog.component.html
@@ -20,15 +20,15 @@
         Debes ingresar una descripción con menos de 1000 carácteres.
       </mat-error>
     </mat-form-field>
+    <div class="flex-end-center gap-025 m-t-1">
+      <button *appButtonLoader="isLoading" mat-raised-button color="primary" type="submit" @inOutRight [@.disabled]="!isLoading">
+        <span>Enviar</span>
+        <mat-icon class="fs-medium">send</mat-icon>
+      </button>
+      
+      <button mat-flat-button type="button" mat-dialog-close>
+        Cancelar
+      </button>
+    </div>
   </form>
-</div>
-<div mat-dialog-actions class="flex-end-center">
-  <button mat-flat-button type="button" mat-dialog-close>
-    Cancelar
-  </button>
-
-  <button mat-raised-button color="primary" [disabled]="isLoading || form.invalid" type="submit">
-    <span>Enviar</span>
-    <mat-icon class="fs-medium">send</mat-icon>
-  </button>
 </div>
