--- a/src/app/features/user/edit-profile/edit-profile.component.html
+++ b/src/app/features/user/edit-profile/edit-profile.component.html
@@ -97,10 +97,15 @@
       </mat-form-field>
 
       <div class="flex-end-center m-t-1">
-        <button *appButtonLoader="isLoading" type="submit" mat-raised-button color="primary" @inOutRight>
-          {{ alreadySaved ? 'Guardado' : 'Guardar' }}
-          <mat-icon class="fs-medium">{{ alreadySaved ? 'check_circle' : 'save' }}</mat-icon>
+        <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading && !alreadySaved" @inOutRight [@.disabled]="!isLoading">
+          Guardar
+          <mat-icon class="fs-medium">save</mat-icon>
         </button>
+        <button type="submit" mat-raised-button color="primary" *ngIf="!isLoading && alreadySaved" @inOutRight [@.disabled]="!isLoading">
+          Guardado
+          <mat-icon class="fs-medium">check_circle</mat-icon>
+        </button>
+        <div class="shapes-loader" *ngIf="isLoading" @inOutLeft></div>
       </div>
     </form>
   </div>
@@ -112,8 +117,7 @@
       <ul>
         <li>Esta información será visible para todos los usuarios del sitio, incluso para usuarios no registrados.</li>
         <li>
-          Además, será utilizada exclusivamente por Planishare para realizar análisis o nuevas carácteristicas para la
-          plataforma.
+          Además, será utilizada exclusivamente por Planishare para realizar análisis o nuevas carácteristicas para la plataforma.
         </li>
       </ul>
     </div>
