feat(login): add new view

--- a/src/app/features/auth/register/register.component.html
+++ b/src/app/features/auth/register/register.component.html
@@ -54,7 +54,7 @@
                             <mat-icon>person_add</mat-icon>
                             Registrarse
                         </button>
-                        <app-square-loader *ngIf="isLoading"></app-square-loader>
+                        <!-- <app-square-loader *ngIf="isLoading"></app-square-loader> -->
                         <span>o</span>
                         <button mat-stroked-button type="button" (click)="loginWithGoogle()">
                           <mat-icon>login</mat-icon>
