--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,54 +1,68 @@
-<nav class="navbar">
-    <button mat-raised-button [routerLink]="'/auth/register'">
-        <mat-icon>person_add</mat-icon>
-        Registrarse
-    </button>
-</nav>
+<main class="container m-b-2 h-100 grid-center-center">
+  <div class="login-card rounded-card flex-column-center">
+    <img src="/assets/images/main-icon.png" alt="Ícono de Planishare" *ngIf="(windowResize.isDesktop$)|async">
+    <h1 class="fs-x-large">Iniciar sesión</h1>
+    <p class="fw-500">Que bueno tenerte de vuelta 🙌</p>
 
-<main class="main">
-    <div class="logo">
-      <button mat-raised-button [routerLink]="'/'">
-        Planishare
+    <form [formGroup]="form" (ngSubmit)="loginWithEmailAndPassword($event)" class="w-100 m-t-05">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Email" formControlName="email" type="email">
+        <mat-error *ngIf="form.controls.email.invalid && form.controls.email.errors!['required']">
+          Debes ingresar un email
+        </mat-error>
+        <mat-error *ngIf="form.controls.email.invalid && form.controls.email.errors!['email']">
+          Debes ingresar un email válido
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Contraseña</mat-label>
+        <input matInput placeholder="Contraseña" formControlName="password"
+          [type]="showPassword? 'text' : 'password'">
+        <button mat-icon-button matSuffix (click)="showPassword = !showPassword">
+          <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+          <mat-icon *ngIf="!showPassword">visibility</mat-icon>
+        </button>
+        <mat-error *ngIf="!wrongCredentials && form.controls.password.errors!['required']">
+          Debes ingresa una contraseña
+        </mat-error>
+        <mat-error *ngIf="wrongCredentials">
+          El email y/o contraseña ingresados son incorrectos
+        </mat-error>
+      </mat-form-field>
+
+      <div class="flex-column-center m-t-05">
+        <button mat-raised-button type="submit" color="primary" class="w-100"
+        *ngIf="!isLoading" @inOutRight>
+          Iniciar sesión
+          <mat-icon class="fs-medium">login</mat-icon>
+        </button>
+        <div class="shapes-loader" *ngIf="isLoading" @inOutLeft></div>
+      </div>
+    </form>
+
+    <div class="flex-column-center m-t-05 gap-05 w-100">
+      <button mat-stroked-button color="primary" (click)="loginWithGoogle()" class="w-100"
+      *ngIf="!isLoadingGoogle" @inOutRight>
+        Continuar con Google
+        <img class="inline-block m-l-025" src="/assets/icons/icon-google.svg" alt="Google icon">
+      </button>
+      <div class="shapes-loader" *ngIf="isLoadingGoogle" @inOutLeft></div>
+
+      <div class="w-100 flex-center-center gap-05">
+        <mat-divider class="w-30"></mat-divider>
+        <span>o</span>
+        <mat-divider class="w-30"></mat-divider>
+      </div>
+
+      <a mat-raised-button [routerLink]="['/auth/register']" class="w-100 text-white bg-blue-dark">
+        Registrarse
+        <mat-icon class="fs-medium">person_add</mat-icon>
+      </a>
+      <button mat-flat-button (click)="openForgotPasswordDialog()" class="w-100">
+        ¿Olvidaste tu contraseña? <span *ngIf="wrongCredentials" @inOutLeft>👀</span>
       </button>
     </div>
-    <div class="container">
-        <mat-card class="card">
-            <mat-card-title class="card-title">Iniciar sesión</mat-card-title>
-            <div class="error-msg">
-              <span *ngIf="wrongCredentials">Email o contraseña incorrectos</span>
-            </div>
-            <mat-card-content>
-                <form class="form" [formGroup]="form" (ngSubmit)="loginWithEmailAndPassword($event)">
-                    <mat-form-field appearance="outline">
-                      <mat-label>Email</mat-label>
-                      <input type="email" matInput formControlName="email">
-                      <mat-error *ngIf="emailControl?.invalid">{{ getEmailErrorMessage() }}</mat-error>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline">
-                      <mat-label>Contraseña</mat-label>
-                      <input [type]="hidePassword? 'password' : 'text'" matInput formControlName="password">
-                      <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
-                        <mat-icon *ngIf="hidePassword">visibility</mat-icon>
-                        <mat-icon *ngIf="!hidePassword">visibility_off</mat-icon>
-                      </button>
-                      <mat-error *ngIf="passwordControl?.invalid">{{ getPasswordErrorMessage() }}</mat-error>
-                    </mat-form-field>
-
-                    <div class="buttons">
-                        <button mat-raised-button color="primary" type="submit" *ngIf="!isLoading">
-                            <mat-icon>login</mat-icon>
-                            Iniciar sesión
-                        </button>
-                        <app-square-loader *ngIf="isLoading"></app-square-loader>
-                        <span>o</span>
-                        <button mat-stroked-button type="button" (click)="loginWithGoogle()">
-                            <mat-icon>login</mat-icon>
-                            Continuar con google
-                        </button>
-                        <a class="forgot-password" (click)="openForgotPasswordDialog()">¿Olvidaste tu contraseña?</a>
-                    </div>
-                  </form>
-            </mat-card-content>
-        </mat-card>
-    </div>
+  </div>
 </main>
