--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -1,94 +1,5 @@
-:host {
-    display: flex;
-    flex-direction: column;
-
-    min-height: 100vh;
-    // min-height: 100%;
-
-    // background-color: var(--primary-color);
-    background-image: url('/assets/images/bg-desktop-light-blue.png');
-    // background-size: cover;
-    background-size: contain;
-}
-
-.navbar {
-    display: flex;
-    justify-content: flex-end;
-
-    padding: 1rem;
-}
-
-.main {
-    margin-top: 2rem;
-    padding: 0 1.2rem 1.2rem 1.2rem;
-}
-
-.logo {
-    display: grid;
-    place-items: center;
-    margin-bottom: 1rem;
-    
-    > button {
-        background-color: var(--green-dark-color);
-
-        font-size: clamp(2rem, 0.0000rem + 4.1667vw, 5rem);
-        color: var(--light-text);
-        
-        padding: 0.5em 1em;
-        border-radius: 15px;
-        
-        box-shadow: 0px 1px 3px #303030;
-        font-weight: 500;
+@media (min-width: 48rem) {
+    .login-card {
+        max-width: 480px;
     }
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-}
-
-.card {
-    flex-basis: 700px;
-
-   > mat-card-title {
-       padding-top: 1rem;
-   }
-    
-    > mat-card-content {
-        padding: 1rem;
-    }
-}
-
-.card-title {
-    text-align: center;
-    font-weight: 500;
-
-    margin-bottom: 1rem;
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
-.error-msg {
-    display: grid;
-    place-items: center;
-    padding-bottom: 1.3em;
-
-    span {
-        color: var(--warn-color);
-        font-weight: 500;
-    }
-}
-
-.buttons {
-    display: grid;
-    place-items: center;
-    // gap: 0.5rem;
-}
-
-.forgot-password {
-    color: var(--primary-color);
-    cursor: pointer;
 }
