--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,17 +1,18 @@
 <header class="header" [ngClass]="{'header_on-scroll': onScroll}">
     <div class="container">
 
+        <!-- Mobile navbar -->
         <button mat-icon-button (click)="openSidenav()" *ngIf="!isDesktop">
             <mat-icon>menu</mat-icon>
         </button>
     
-        <a class="logo text-blue-dark" matRipple [routerLink]="['/']">
+        <a class="logo fs-large fw-800 text-blue-dark" matRipple [routerLink]="['/']">
             <img src="/assets/images/main-icon.png" alt="Ícono de Planishare">
             <span>Plansihare</span>
         </a>
     
-        <a mat-icon-button *ngIf="!isDesktop" [routerLink]="['/user/edit-profile']">
-            <mat-icon>person</mat-icon>
+        <a mat-icon-button *ngIf="!isDesktop" [routerLink]="['/posts/list']">
+            <mat-icon>search</mat-icon>
         </a>
     
         <!-- Desktop navbar -->
