fix(login): fix forgot password dialog

--- a/src/app/features/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
+++ b/src/app/features/auth/components/forgot-password-dialog/forgot-password-dialog.component.html
@@ -1,15 +1,28 @@
-<h1>¿Olvidaste tu contraseña?</h1>
-<p>Te enviaremos un email con un enlace para que puedas cambiarla</p>
-<div class="flex_column flex_center">
-    <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input type="email" matInput [formControl]="email">
-        <mat-error *ngIf="email?.invalid">{{ getEmailErrorMessage() }}</mat-error>
-    </mat-form-field>
-    <app-square-loader *ngIf="isLoading"></app-square-loader>
-    <button
-        mat-raised-button
-        [disabled]="!email.valid"
-        (click)="resetPassword()"
-        *ngIf="!isLoading">Restablecer contraseña</button>
+<h1 class="fs-large">¿Olvidaste tu contraseña? 😅</h1>
+<div mat-dialog-content>
+  <p class="m-y-1">Te enviaremos un email con un enlace para que puedas restablecerla 📫</p>
+  <p>Recuerda revisar spam!</p>
+</div>
+<div mat-dialog-actions class="flex-end-center gap-025">
+  <mat-form-field appearance="outline" class="w-100">
+    <mat-label>Email</mat-label>
+    <input type="email" matInput [formControl]="email">
+    <mat-error *ngIf="email.invalid && email.errors!['required']">
+      Debes ingresar tu email
+    </mat-error>
+    <mat-error *ngIf="email.invalid && email.errors!['email']">
+      Debes ingresar tu email válido
+    </mat-error>
+  </mat-form-field>
+
+  <button mat-raised-button color="primary" (click)="resetPassword()" *ngIf="!isLoading" @inOutRight
+    [@.disabled]="!isLoading">
+    Restablecer contraseña
+    <mat-icon class="fs-medium">send</mat-icon>
+  </button>
+  <div class="shapes-loader" *ngIf="isLoading" @inOutLeft></div>
+
+  <button mat-flat-button mat-dialog-close>
+    Cancelar
+  </button>
 </div>
